--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,7 +20,8 @@
         "react-icons": "^5.0.1",
         "react-router-dom": "^6.22.3",
         "sonner": "^1.4.41",
-        "styled-components": "^6.0.4"
+        "styled-components": "^6.0.4",
+        "sweetalert2": "^11.10.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.14",
