--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "back-end",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "json-server --watch db.json"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "json-server": "^0.17.3"
-    }
+  "name": "back-end",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'No build necessary for back-end'",
+    "dev": "json-server --watch db.json"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^0.17.3"
+  }
 }
