--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-    "name": "react-course-routing",
-    "workspaces": [
-        "front-end",
-        "back-end"
-    ],
-    "dependencies": {
-        "cp": "^0.2.0",
-        "npm-run-all": "^4.1.5"
-    },
-    "scripts": {
-        "reset": "cp \"./back-end/backup/original_db.json\" ./back-end/db.json",
-        "front-end": "npm run dev --workspace=front-end",
-        "back-end": "npm run dev --workspace=back-end",
-        "dev": "npm-run-all --parallel front-end back-end "
-    }
+  "name": "react-course-routing",
+  "workspaces": [
+    "front-end",
+    "back-end"
+  ],
+  "dependencies": {
+    "cp": "^0.2.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "scripts": {
+    "reset": "cp \"./back-end/backup/original_db.json\" ./back-end/db.json",
+    "front-end": "npm run dev --workspace=front-end",
+    "back-end": "npm run dev --workspace=back-end",
+    "build-front-end": "npm run build --workspace=front-end",
+    "build-back-end": "npm run build --workspace=back-end",
+    "build": "npm run build-front-end && npm run build-back-end",
+    "dev": "npm-run-all --parallel front-end back-end "
+  }
 }
